# dots-cli

./: Cargo.toml  Readme.md  Releases.md  roadmap.md
.devcontainer/: devcontainer.json
.github/: release.yml
.github/workflows/: rust.yml
fixtures/conflicting_dot/: Dot.toml
fixtures/example_dot/: Dot.toml
fixtures/example_dot_with_directory/: Dot.toml
fixtures/example_dot_with_link_added/: Dot.toml
fixtures/example_dot_with_link_added/shell/: bash_profile
fixtures/example_dot_with_multi_link/: Dot.toml
fixtures/example_dot_with_unlinked_file/: Dot.toml
fixtures/example_dot_with_unlinked_file/shell/: bashrc  zshrc
src/: commands.rs  dot_package.rs  dots.rs  footprint.rs  fs_manager.rs  git_utils.rs  install.rs  link.rs  main.rs
src/plan/: actions.rs  footprint.rs  links.rs  mod.rs  plan.rs  resolve.rs
src/utils/: fs.rs  git.rs  links.rs  mod.rs
test_utils/: Cargo.toml
test_utils/src/: assertable_output.rs  fixtures.rs  lib.rs  style.rs  test_dir.rs  test_manager.rs  types.rs  utils.rs
tests/: cli.rs  command_dots.rs  subcommand_add.rs  subcommand_help.rs  subcommand_install.rs  subcommand_list.rs  subcommand_path.rs  subcommand_uninstall.rs
tests/footprints/: example_dot.toml  example_dot_with_invalid_link.toml  example_dot_with_link_added.toml  example_dot_with_unlinked_file.toml
tests/output/: add_dot_success.out  add_fail_with_missing_dot_toml.out  add_fail_with_missing_repo.out  add_fail_with_overwrite_warning.out  add_help.out  add_success.out  add_success_using_overwrite.out  help.out  install_fail_with_conflicts.err  install_fail_with_existing_directory_warning.err  install_fail_with_existing_file_warning.err  install_fail_with_existing_link_warning.err  install_fail_with_missing_dotfile.err  install_help.out  install_success.err  install_success.out  install_success_when_linking_directory.err  install_success_with_dry.err  install_success_with_multiple_links_for_one_src.err  list_help.out  list_success_with_multiple_directories.out  list_success_with_origins_flag.out  path_fail_with_missing_dot.out  path_help.out  uninstall_fail_with_unkown_dot.err  uninstall_help.out  usage.out  version.out
tests/utils/: mod.rs
utils/: Cargo.toml
utils/src/: fs.rs  git.rs  stylize.rs
