[package]
name = "dots"
version = "0.2.1"
description = "A cli for managing all your dot(file)s"
license = "MIT"
authors = ["Michael Mullins <michael@webdesserts.com>"]
edition = "2021"

[dependencies]
utils = { path = "utils" }

# errors
failure = "^0.1.8"

# paths & io
camino = { version = "^1.0.5", features = ['serde1'] }

# terminal
clap = "^2.34.0"
dirs = "^4.0.0"

# logging
env_logger = "^0.9.0"
log = "^0.4.14"

# serialization
serde = "^1.0.133"
serde_derive = "^1.0.133"
toml = "^0.5.8"

[dev-dependencies]
# testing
tempfile = "^3.2.0"
walkdir = "^2.3.2"
assert_cmd = "^2.0.2"
pretty_assertions = "^1.0.0"
test_utils = { path = "test_utils" }
