[package]
name = "dots"
version = "0.2.1"
description = "A cli for managing all your dot(file)s"
license = "MIT"
authors = ["Michael Mullins <michael@webdesserts.com>"]
edition = "2021"

[dependencies]
utils = { package = "dots_internal_utils", path = "packages/utils" }

# paths & io
camino = { version = "^1.0.5", features = ['serde1'] }

# terminal
clap = "^2.34.0"
dirs = "^4.0.0"

# logging
env_logger = "^0.9.0"
log = "^0.4.14"

# serialization
serde = "^1.0.133"
serde_derive = "^1.0.133"
toml = "^0.5.8"
anyhow = "1.0.53"

# fs
tempfile = "^3.2.0"

[dev-dependencies]
# testing
walkdir = "^2.3.2"
pretty_assertions = "^1.0.0"
test_utils = { path = "packages/test_utils" }
