[package]
name = "dots"
version = "0.4.1"
edition = "2021"
license = "MIT"
readme = "Readme.md"
description = "A cli for managing all your dot(file)s"
authors = ["Michael Mullins <michael@webdesserts.com>"]
repository = "https://github.com/webdesserts/dots-cli"
homepage = "https://github.com/webdesserts/dots-cli"

[workspace]
members = ["packages/*"]

[dependencies]
utils = { package = "dots_internal_utils", version = "^0.4.0", path = "packages/utils" }

# paths & io
camino = { version = "^1.0.5", features = ['serde1'] }

# terminal
clap = { version = "^3.1.8", features = ["cargo", "derive"] }
dirs = "^4.0.0"

# logging
env_logger = "^0.9.0"
log = "^0.4.14"

# serialization
serde = "^1.0.133"
serde_derive = "^1.0.133"
toml = "^0.5.8"
anyhow = "1.0.53"

# fs
tempfile = "^3.2.0"

[dev-dependencies]
# testing
walkdir = "^2.3.2"
test_utils = { path = "packages/test_utils" }
