[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.0.5"
console = "0.15.0"
failure = "0.1.8"
similar = { version="2.1.0", features=["inline"] }
tempfile = "3.2.0"
walkdir = "2.3.2"

[features]
